--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderbiblio.tmpl
@@ -4,7 +4,7 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+<!-- TMPL_INCLUDE NAME="acquisitions-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; Search Existing Records</div>
 
@@ -39,7 +39,7 @@
 <div class="searchresults">
     <table>
     <tr>
-       <th>Summary</th>
+       <th colspan="2">Summary</th>
     </tr>
     <!-- TMPL_LOOP NAME="resultsloop" -->
         <tr>
