--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tmpl
@@ -69,7 +69,7 @@ if (quantity ==0) {
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+<!-- TMPL_INCLUDE NAME="acquisitions-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; <a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->">Shopping Basket <!-- TMPL_VAR NAME="basketno" --></a> &rsaquo; <!-- TMPL_IF name="ordnum" -->Modify order details (line #<!-- TMPL_VAR NAME="ordnum" -->)<!-- TMPL_ELSE -->New order<!-- /TMPL_IF --></div>
 
@@ -79,7 +79,6 @@ if (quantity ==0) {
 	<div id="yui-main">
 	<div class="yui-b">
 	
-
 <h1>
     <!-- TMPL_IF name="ordnum" -->
         Modify order details (line #<!-- TMPL_VAR NAME="ordnum" -->)
@@ -101,7 +100,7 @@ if (quantity ==0) {
 <!-- /TMPL_IF -->
 
 <form action="/cgi-bin/koha/acqui/addorder.pl" method="post" name="frusin">
-    <fieldset>
+    <fieldset class="rows">
         <legend>Catalogue details</legend>
         <!-- TMPL_UNLESS name="existing" -->
 		<input type="hidden" name="existing" value="no" />
@@ -120,65 +119,65 @@ if (quantity ==0) {
         <!-- TMPL_LOOP NAME="loop_currencies" -->
             <input type="hidden" name="<!-- TMPL_VAR NAME="currency" -->" value="<!-- TMPL_VAR NAME="rate" -->" />
         <!-- /TMPL_LOOP -->
-        <p>
+        <ol><li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>Title</strong>
-                <input type="hidden" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" /><!-- TMPL_VAR NAME="title" -->
+			<span class="label">Title</span>
+                <input type="hidden" size="20" id="title" name="title" value="<!-- TMPL_VAR NAME="title" -->" /><!-- TMPL_VAR NAME="title" -->
             <!-- TMPL_ELSE -->
             <label for="title" class="required">Title</label>
                 <input type="text" id="title" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>Author</strong>
-                <input type="hidden" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" /><!-- TMPL_VAR NAME="author" -->
+			<span class="label">Author</label>
+                <input type="hidden" size="20" name="author" id="author" value="<!-- TMPL_VAR NAME="author" -->" /><!-- TMPL_VAR NAME="author" -->
             <!-- TMPL_ELSE -->
             <label for="author">Author</label>
-                <input type="text" id="author" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" />
+                <input type="text" id="author" size="20" name="author" id="author" value="<!-- TMPL_VAR NAME="author" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>Publisher</strong>
-                <input type="hidden" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" /><!-- TMPL_VAR NAME="publishercode" -->
+			<span class="label">Publisher</label>
+                <input type="hidden" size="20" name="publishercode" id="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" /><!-- TMPL_VAR NAME="publishercode" -->
             <!-- TMPL_ELSE -->
             <label for="publishercode"> Publisher</label>
-                <input type="text" id="publishercode" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" />
+                <input type="text" id="publishercode" size="20" name="publishercode" id="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>Copyright Date</strong>
-                <input type="hidden" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" /><!-- TMPL_VAR NAME="copyrightdate" -->
+			<lspan class="label">Copyright Date</label>
+                <input type="hidden" size="20" name="copyrightdate" id="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" /><!-- TMPL_VAR NAME="copyrightdate" -->
             <!-- TMPL_ELSE -->
             <label for="copyrightdate">Copyright Date</label>
-                <input type="text" id="copyrightdate" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
+                <input type="text" id="copyrightdate" size="20" name="copyrightdate" id="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <label for="format">Format</label>
             <!-- TMPL_VAR NAME="CGIitemtype" -->
-        </p>
-        <p>
+        </li>
+        <li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>ISBN</strong>
-                <input type="hidden" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /><!-- TMPL_VAR NAME="isbn" -->
+			<span class="label">ISBN</label>
+                <input type="hidden" size="20" name="ISBN" id="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /><!-- TMPL_VAR NAME="isbn" -->
             <!-- TMPL_ELSE -->
             <label for="ISBN">ISBN</label>
-                <input type="text" id="ISBN" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" />
+                <input type="text" id="ISBN" size="20" name="ISBN" id="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <!-- TMPL_IF name="biblio" -->
-			<strong>Series</strong>
-                <input type="hidden" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /><!-- TMPL_VAR NAME="seriestitle" -->
+			<span class="label">Series</label>
+                <input type="hidden" size="20" name="series" id="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /><!-- TMPL_VAR NAME="seriestitle" -->
             <!-- TMPL_ELSE -->
             <label for="series">Series</label>
-                <input type="text" id="series" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" />
+                <input type="text" id="series" size="20" name="series" id="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" />
             <!-- /TMPL_IF -->
-        </p>
-        <p>
+        </li>
+        <li>
             <label for="branch">Branch</label>
             <select name="branch" id="branch">
             <!-- TMPL_LOOP name="branchloop" -->
@@ -188,109 +187,108 @@ if (quantity ==0) {
 				<!-- /TMPL_IF -->
             <!-- /TMPL_LOOP -->
             </select>
-        </p>
+        </li>
     </fieldset>
-    <fieldset>
+    <fieldset class="rows">
         <legend>Accounting details</legend>
-            <p>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Quantity</strong>
-                    <input type="hidden" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" /><!-- TMPL_VAR NAME="quantity" -->
+			<span class="label">Quantity</label>
+                    <input type="hidden" size="20" id="quantity" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" /><!-- TMPL_VAR NAME="quantity" -->
                 <!-- TMPL_ELSE -->
                 <label for="quantity">Quantity</label>
-                    <input type="text" id="quantity" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" />
+                    <input type="text" id="quantity" size="20" id="quantity" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" />
                 <!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Bookfund</strong>
-                    <input type="hidden" size="20" name="bookfund" value="<!-- TMPL_VAR NAME="bookfundid" -->" /><!-- TMPL_VAR NAME="bookfundname" -->
+			<span class="label">Bookfund</label>
+                    <input type="hidden" size="20" name="bookfund" id="bookfund" value="<!-- TMPL_VAR NAME="bookfundid" -->" /><!-- TMPL_VAR NAME="bookfundname" -->
                 <!-- TMPL_ELSE -->
                 <label for="bookfund">Bookfund</label>
                     <!-- TMPL_VAR NAME="CGIbookfund" -->
                 <!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Supplier price</strong>
-                    <input type="hidden" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" /><!-- TMPL_VAR NAME="listprice" -->
+			<span class="label">Supplier price</label>
+                    <input type="hidden" size="20" name="list_price" id="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" /><!-- TMPL_VAR NAME="listprice" -->
                 <!-- TMPL_ELSE -->
                 <label for="list_price">Supplier price</label>
-                    <input type="text" id="list_price" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" />
+                    <input type="text" id="list_price" size="20" name="list_price" id="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" />
                 <!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Replacement Cost</strong>
-                    <input type="hidden" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" /><!-- TMPL_VAR NAME="rrp" -->
+			<span class="label">Replacement Cost</label>
+                    <input type="hidden" size="20" name="rrp" id="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" /><!-- TMPL_VAR NAME="rrp" -->
                 <!-- TMPL_ELSE -->
                 <label for="rrp">Replacement Cost </label>
-                    <input type="text" id="rrp" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
+                    <input type="text" id="rrp" size="20" name="rrp" id="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
                 <!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Budgeted Cost</strong>
-                    <input type="text" id="" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" readonly="readonly"  />
+			<label for="ecost">Budgeted Cost</label>
+                    <input type="text" size="20" name="ecost" id="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" readonly="readonly"  />
                 <!-- TMPL_ELSE -->
                 <label for="ecost">Budgeted Cost</label>
-                    <input type="text" id="ecost" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" />
+                    <input type="text" id="ecost" size="20" name="ecost" id="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" />
                 <!--/TMPL_IF-->
-            </p>
+            </li>
             <!-- TMPL_IF NAME="GST"-->
-            <p>
+            <li>
 				<!-- TMPL_IF name="close" -->
-			<strong>Budgeted GST</strong>
-                <input type="text" id="" size="20" name="GST" value="" readonly="readonly" />
+			<label for="GST">Budgeted GST</label>
+                <input type="text" id="" size="20" name="GST" value="" id="GST" readonly="readonly" />
 				<!-- TMPL_ELSE -->
                 <label for="GST">Budgeted GST</label>
-                <input type="text" id="GST" size="20" name="GST" value="" />
+                <input type="text" id="GST" size="20" name="GST" id="GST" value="" />
 				<!--/TMPL_IF-->
-            </p>
+            </li>
             <!-- /TMPL_IF -->
-            <p>
+            <li>
                 <!-- TMPL_IF name="close" -->
-			<strong>Total</strong>
-				<input type="text" id="" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" readonly="readonly" />
+			<label for="total">Total</label>
+				<input type="text" id="total" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" readonly="readonly" />
 				<!-- TMPL_ELSE -->
-                <label for="total"><strong>Total</strong></label>
+                <label for="total"><label for="">Total</label></label>
                 <input type="text" id="total" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" />
 				<!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
 				<!-- TMPL_IF name="close" -->
-			<strong>Actual Cost</strong>
-                <input type="text" id="" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" readonly="readonly" />
+			<label for="cost">Actual Cost</label>
+                <input type="text" id="cost" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" readonly="readonly" />
 				<!-- TMPL_ELSE -->
                 <label for="cost">Actual Cost</label>
                 <input type="text" id="cost" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" />
 				<!--/TMPL_IF-->
-            </p>
-            <p>
+            </li>
+            <li>
                 <label for="invoice">Invoice Number</label>
                 <input type="text" id="invoice" size="20" name="invoice"  value="<!-- TMPL_VAR name="invoice" -->" />(usually empty)
-            </p>
-            <p>
+            </li>
+            <li>
                 <label for="notes">Notes</label>
                 <input type="text" id="notes" size="20" name="notes" value="<!-- TMPL_VAR NAME="notes" -->" />
-            </p>
-            <p>The 2 following fields are available for your own usage. They can be useful for stat purposes</p>
-            <p>
+            </li>
+            <li>The 2 following fields are available for your own usage. They can be useful for statistical purposes
                 <!-- TMPL_IF Name="CGIsort1" -->
                     <!-- TMPL_VAR Name="CGIsort1" -->
                 <!-- TMPL_ELSE -->
                 <label for="sort1">Sort field 1</label>
                     <input type="text" id="sort1" size="20" name="sort1" value="<!-- TMPL_VAR NAME="sort1" -->" />
                 <!--/TMPL_IF -->
-            </p>
-            <p>
+            </li>
+            <li>
                 <!-- TMPL_IF Name="CGIsort2" -->
                     <!-- TMPL_VAR Name="CGIsort2" -->
                 <!-- TMPL_ELSE -->
                 <label for="sort2">Sort field 2</label>
                     <input type="text" id="sort2" size="20" name="sort2" value="<!-- TMPL_VAR NAME="sort2" -->" />
                 <!--/TMPL_IF -->
-            </p>
+            </li></ol>
     </fieldset>
     <p>
         <input type="button" value="OK" onclick="check(this.form)" />
