small html fix (mostly for translator purposes)
Signed-off-by: Chris Cormack <crc@liblime.com>
Signed-off-by: Joshua Ferraro <jmf@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-layout.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-layout.tmpl
@@ -236,7 +236,7 @@
     <!-- /TMPL_LOOP -->
 </select></p>
 <p>
-<label for="name="startlabel">Start printing from Label number:<input type="textbox" name="startlabel" id="startlabel" size="2" value="1" /></label></p>
+<label for="startlabel">Start printing from Label number:<input type="textbox" name="startlabel" id="startlabel" size="2" value="1" /></label></p>
 
 
 <p><label for="guidebox">Draw Guide Boxes<input type="checkbox" id="guidebox" name="guidebox" value="1" /></label></p>
