--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/search.tmpl
@@ -115,9 +115,11 @@
                     <select name="Filter">
                         <option value="">All Item Types</option>
                         <!-- TMPL_LOOP name="itemtypeloop" -->
-                            <option value="<!-- TMPL_VAR name="value" -->" 
-                    <!-- TMPL_IF name="selected" --> selected="selected"
-                    <!-- /TMPL_IF -->><!-- TMPL_VAR name="description" --></option>
+                            <!-- TMPL_IF name="selected" -->
+                                <option value="<!-- TMPL_VAR name="value" -->"  selected="selected" >
+                            <!-- TMPL_ELSE -->
+                                <option value="<!-- TMPL_VAR name="value" -->">
+                            <!-- /TMPL_IF --><!-- TMPL_VAR name="description" --></option>
                         <!-- /TMPL_LOOP -->
                     </select>
                 </td>
