--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_210c.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/unimarc_field_210c.tmpl
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <h1 class="authority">Authority search results</h1>
     <div id="bloc25">
-        <form name="f" method="post" action="cataloguing/plugin_launcher.pl">
+        <form name="f" method="post" action="plugin_launcher.pl">
             <input type="hidden" name="plugin_name" value="unimarc_field_210c.pl">
             <input type="hidden" name="op" value="do_search">
             <input type="hidden" name="type" value="intranet">
@@ -18,12 +18,9 @@
                 </p>
                 <p>
                     <label class="label100">Search value</label><input type="text" name="value" value="<!-- TMPL_VAR name="resultstring" -->">
+                    <input type="hidden" name="index" value="<!--TMPL_VAR Name="index"-->">
                     <input type="hidden" name="authtypecode" value="EDITORS">
-                    <input type="hidden" name="marclist" value="">
-                    <input type="hidden" name="and_or" value="and">
-                    <input type="hidden" name="excluding" value="">
-                    <input type="hidden" name="operator" value="contains">
-                    <input type="hidden" name="index" value="<!-- TMPL_VAR NAME="index" -->">
+                    <input type="hidden" name="q" value="<!-- TMPL_VAR NAME="index" -->">
                 </p>
                 <p>
                 <input type="submit" value="Start search" class="button authority">
@@ -44,7 +41,7 @@
                         <img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->-highlight.gif">
                     <!-- TMPL_ELSE -->
                         <a href="cataloguing/plugin_launcher.pl?plugin_name=unimarc_field_210c.pl&amp;startfrom=<!-- TMPL_VAR NAME="startfrom" -->&amp;authtypecode=EDITORS&and_or=and&operator=contains&value=<!-- TMPL_VAR NAME="resultstring" -->&op=do_search&type=intranet&index=<!-- TMPL_VAR name="index" -->">
-                            <img src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->.gif" border="0"></a>
+                            <img  src="/intranet-tmpl/default/images/numbers/<!-- TMPL_VAR NAME="number" -->.gif" border="0"></a>
                     <!-- /TMPL_IF -->
                 <!-- /TMPL_LOOP -->
                 <!-- TMPL_IF name="displaynext" -->
@@ -72,7 +69,7 @@
                         <td><!-- TMPL_VAR NAME="summary" --></td>
                         <td><!-- TMPL_VAR NAME="used" --> times</td>
                         <td>
-                            <a href='javascript:report(<!-- TMPL_VAR NAME="index" -->,"<!-- TMPL_VAR name="summary" -->")'><img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/arrow.gif" width="32" hspace="0" vspace="0" border="0"></a>
+                            <a href="javascript:report('<!-- TMPL_VAR NAME="index" -->','<!-- TMPL_VAR name="summary" ESCAPE=JS -->')"><img alt="choose" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/arrow.gif" width="32" hspace="0" vspace="0" border="0"></a>
                         </td>
                     </tr>
                 <!-- /TMPL_LOOP -->
@@ -110,7 +107,7 @@ function report(index,summary)
     var regexp= /(\d* -+ *)(.*)/;
     var result=summary.match(regexp);
     var doc   = opener.document; 
-    var field = doc.getElementById("<!-- TMPL_VAR NAME='index'-->");
+    var field = doc.getElementById(index);
 
     field.value = result[2];
     self.close();
