--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-bib-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-bib-search.tmpl
@@ -9,7 +9,9 @@
 	
 
 <h1>Catalogue search</h1>
-
+<!-- TMPL_IF name="no_query" -->
+    <div class="warning">You must enter a term to search on </div>
+<!-- /TMPL_IF -->
 <form name="f" action="/cgi-bin/koha/serials/subscription-bib-search.pl" method="post">
     <input type="hidden" name="op" value="do_search" />
     <input type="hidden" name="type" value="intranet" />
